--- a/templates/list.twig
+++ b/templates/list.twig
@@ -17,8 +17,8 @@
                 [{{ item.is_dir?'d':'f' }}] <a href='/session/{{ session.id_session }}/file/{{ item.id_file }}'>{{ item.path|toPath }}</a>
             </div>
             <div class="col-xs-6">
-                <div class="progress">
-                    <div class="coverage-list-item-text">{{ item.covered }}/{{ item.effective_lines is null?item.total_lines:item.effective_lines}} / ({{ item.count_files }})</div>
+                <div class="progress" style="width:{{ item.ratio }}%">
+                    <div  class="coverage-list-item-text">{{ item.covered }}/{{ item.effective_lines is null?item.total_lines:item.effective_lines}} / ({{ item.count_files }})</div>
 
                     {% spaceless %}
                         <span class="progress-bar progress-bar-success"
