ajout info total lines (useless)

--- a/templates/list.twig
+++ b/templates/list.twig
@@ -27,6 +27,8 @@
                               style="width: {{ item.percent_uncovered }}%;"></span>
                         <span class="progress-bar progress-bar-warning "
                               style="width: {{ item.percent_deadcode }}%;"></span>
+                        <span class="progress-bar progress-bar-info"
+                              style="width: {{ item.percent_useless }}%;"></span>
                     {% endspaceless %}
                 </div>
             </div>
